Update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,7 @@ datasets/test/
 
 # Ignore all .pt files in the "weights" folder
 weights/*.pt
+
+# Ignore specific folders in data_test
+data_test/images/
+data_test/videos/
